--- a/career.css
+++ b/career.css
@@ -540,6 +540,7 @@ h2 {
 .career-section {
     padding: 2rem;
     font-family: Arial, sans-serif;
+    margin-top: 2rem;
   }
   
   .career-intro, 
