margin top modified

--- a/career.css
+++ b/career.css
@@ -543,6 +543,9 @@ h2 {
     margin-top: 3rem;
   }
   
+  .career-intro {
+    margin: 30px;
+  }
   .career-intro, 
   .company-culture, 
   .openings, 
