modified margin top

--- a/contact.css
+++ b/contact.css
@@ -546,6 +546,7 @@ h2 {
     text-align: center;
     padding: 2rem;
     background-color: #fff;
+    margin-top: 30px;
   }
   
   .contact-header h2 {
