--- a/style.css
+++ b/style.css
@@ -430,15 +430,10 @@
 }
 
 .clients-grid img {
-  max-width: 100%;
+  max-width: 6rem;
   height: auto;
   object-fit: contain;
-  filter: grayscale(100%); /* Optional for a cleaner look */
   transition: filter 0.3s ease;
-}
-
-.clients-grid img:hover {
-  filter: grayscale(0); /* Highlight on hover */
 }
 
 /* Footer */
